@@ -1,5 +1,7 @@
 * 0.?.? (2008-10-??):
   - Added experimental support for plug-able backends
+  - Backported REXML code as a backend
+  - Added experimental Hpricot backend
 
 * 0.2.1 (2008-10-13):
   - Fixed a bug where attributes with dashes would crash the party
